# vox-format

./: .pre-release-hook.sh  Cargo.toml  LICENSE  README.md  default_palette_to_rust.py  release.toml
test_files/: glider.vox  ore_small.vox  test_custom_palette.vox  test_materials.vox  test_multiple_models.vox  test_no_models.vox
vox-format/: Cargo.toml  README.md
vox-format/src/: building_blocks.rs  chunk.rs  data.rs  default_palette.rs  image.rs  lib.rs  mint.rs  nalgebra.rs  palette.rs  reader.rs  types.rs  vox.rs  writer.rs
vox-tool/: Cargo.toml  README.md
vox-tool/src/: main.rs
