[package]
name = "vox-format"
version = "0.1.0"
edition = "2018"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
description = "Parser for MagicaVoxel's .VOX file format."
license = "MIT"
documentation = "https://docs.rs/vox-format"
homepage = "https://github.com/jgraef/vox-format"
repository = "https://github.com/jgraef/vox-format"
readme = "REAMDE.md"
categories = ["encoding", "game-development", "graphics", "multimedia::encoding", "parser-implementations", "rendering::data-formats"]
keywords = ["voxel"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
byteorder = "1.4"
thiserror = "1.0"
log = "0.4"

[dependencies.image]
version = "0.23"
optional = true

[dependencies.building_blocks_core]
version = "0.7"
path = "../../building-blocks/crates/building_blocks_core"
optional = true

[dependencies.building_blocks_storage]
version = "0.7"
path = "../../building-blocks/crates/building_blocks_storage"
optional = true

[dev-dependencies]
pretty_env_logger = "0.4"
dotenv = "0.15"

[features]
#default = []
default = ["full"]
full = ["image", "building-blocks"]
building-blocks = ["building_blocks_storage", "building_blocks_core"]
