[package]
name = "vox-tool"
version = "0.1.0"
edition = "2018"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
description = "Tools for MagicaVoxel's .VOX file format."
license = "MIT"
documentation = "https://github.com/jgraef/vox-format"
homepage = "https://github.com/jgraef/vox-format"
repository = "https://github.com/jgraef/vox-format"
readme = "README.md"
categories = ["command-line-utilities", "game-development", "graphics", "multimedia::encoding", "rendering::data-formats"]
keywords = ["voxel"]

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
structopt = "0.3"
color-eyre = "0.5"
image = "0.23"

[dependencies.vox-format]
version = "0.1.0"
path = "../vox-format"
features = ["image"]
